[package]
name = "ruspiro-loader"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.1.0" # remember to update html_root_url
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-loader/"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "bootloader"]
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

[[bin]]
name = "kernel"
path = "./src/entry.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
ruspiro-register = { path = "../register", version = "0.3" }
ruspiro-gpio = { path = "../gpio", version = "0.3" }
ruspiro-interrupt = { path = "../interrupt", version = "0.3" }
ruspiro-uart = { path = "../uart", version = "0.3" }
ruspiro-singleton = { path = "../singleton", version =" 0.3" }
ruspiro-lock = { path = "../lock", version = "0.3" }
ruspiro-timer = { path = "../timer", version = "0.3" }
ruspiro-cache = { path = "../cache", version = "0.3" }
ruspiro-allocator = { path = "../allocator", version ="0.3" }

[features]
default = ["ruspiro_pi3"]
ruspiro_pi3 = [
    "ruspiro-gpio/ruspiro_pi3",
    "ruspiro-uart/ruspiro_pi3",
    "ruspiro-interrupt/ruspiro_pi3"
]
