[package]
name = "ruspiro-loader"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.1.0" # remember to update html_root_url
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-loader/"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "bootloader"]
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

[[bin]]
name = "kernel"
path = "./src/entry.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
rlibc = "1.0.0"
ruspiro-register = "0.4"
ruspiro-gpio = "0.4"
ruspiro-interrupt = "0.3"
ruspiro-uart = "0.3"
ruspiro-singleton = "0.3"
ruspiro-lock = "0.4"
ruspiro-timer = "0.4"
ruspiro-cache = "0.3"
ruspiro-allocator = "0.4"

[features]
default = ["ruspiro_pi3"]
ruspiro_pi3 = [
    "ruspiro-gpio/ruspiro_pi3",
    "ruspiro-uart/ruspiro_pi3",
    "ruspiro-interrupt/ruspiro_pi3"
]
