[package]
name = "ruspiro-loader"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.2.0" # remember to update html_root_url
license = "MIT"
repository = "https://github.com/RusPiRo/ruspiro-loader/"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "bootloader"]
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

[[bin]]
name = "kernel"
path = "./src/entry.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
rlibc = "~1.0.0"
ruspiro-arch-aarch64 = "~0.1.4"
ruspiro-mmio-register = "~0.1.3"
ruspiro-interrupt = "~0.5.0"
ruspiro-timer = "~0.6.0"
ruspiro-allocator = "~0.4.5"

[features]
pi3 = [
    "ruspiro-interrupt/pi3",
    "ruspiro-timer/pi3",
]
pi4_low = [
    "ruspiro-interrupt/pi4_low",
    "ruspiro-timer/pi4_low",
]
pi4_high = [
    "ruspiro-interrupt/pi4_high",
    "ruspiro-timer/pi4_high"
]

[patch.crates-io]
ruspiro-interrupt = { git = "https://github.com/RusPiRo/ruspiro-interrupt.git", branch = "development" }
ruspiro-timer = { git = "https://github.com/RusPiRo/ruspiro-timer.git", branch = "development" }
