[package]
name = "compile-issue"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.0.1" # remember to update html_root_url
description = ""
keywords = ["RusPiRo", "baremetal", "raspberrypi"]
categories = ["no-std", "embedded"]
edition = "2018"


[[bin]]
name = "compile-issue"
path = "./src/main.rs"

[dependencies]
ruspiro-mailbox = "0.1.0"
ruspiro-console = { version = "0.1.1", features = ["with_allocator"] }

[features]
