[package]
name = "ruspiro-test-kernel"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.0.1" # remember to update html_root_url
description = """
Simple test kernel for the boot loader
"""
license = "Apache-2.0"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "bootloader"]
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

# keep either bin or lib
[[bin]]
name = "kernel"
path = "./src/kernel.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
cc = "1.0"

[dependencies]
ruspiro-boot = { path = "../../boot", version = "0.3", features = ["singlecore"] }
#ruspiro-register = { path = "../../register", version = "0.3" }
#ruspiro-interrupt = { path = "../../interrupt", version = "0.3" }
ruspiro-gpio = { path = "../../gpio", version = "0.3" }
ruspiro-timer = { path = "../../timer", version = "0.3" }
ruspiro-uart = { path = "../../uart", version = "0.3", features = ["with_allocator"] }
ruspiro-singleton = { path = "../../singleton", version = "0.3" }

[features]
default = ["ruspiro_pi3"]
ruspiro_pi3 = [
    "ruspiro-gpio/ruspiro_pi3",
    "ruspiro-timer/ruspiro_pi3",
    "ruspiro-uart/ruspiro_pi3"
]