[package]
name = "ruspiro-test-kernel"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.0.1" # remember to update html_root_url
description = """
Simple test kernel for the boot loader
"""
license = "Apache-2.0"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "bootloader", "test-kernel"]
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

[workspace]

# keep either bin or lib
[[bin]]
name = "kernel"
path = "./src/kernel.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
ruspiro-boot = { path = "../../boot", version = "0.3" }#, features = ["singlecore"] }
ruspiro-allocator = { path = "../../allocator", version = "0.3" }
ruspiro-gpio = { path = "../../gpio", version = "0.3" }
ruspiro-singleton = { path = "../../singleton", version = "0.3" }
ruspiro-interrupt = { path = "../../interrupt", version = "0.3" }
ruspiro-register = { path = "../../register", version = "0.3" }


[features]
default = ["ruspiro_pi3"]
ruspiro_pi3 = [
    "ruspiro-boot/ruspiro_pi3",
    "ruspiro-gpio/ruspiro_pi3"
]