[package]
name = "ruspiro-test-kernel"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.0.1" # remember to update html_root_url
description = """
Simple test kernel for the boot loader
"""
license = "Apache-2.0 OR MIT"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "bootloader", "test-kernel"]
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

#[workspace]

# keep either bin or lib
[[bin]]
name = "kernel"
path = "./src/kernel.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
ruspiro-boot = { version = "~0.5.3", features = ["multicore"] }
ruspiro-allocator = "~0.4.5"
ruspiro-gpio = "~0.4.3"
ruspiro-singleton = "~0.4.3"
ruspiro-interrupt = "~0.4.3"
ruspiro-mmio-register = "~0.1.3"


[features]
default = ["pi3"]
pi3 = [
    "ruspiro-gpio/ruspiro_pi3"
]

[patch.crates-io]
ruspiro-gpio = { path = "../../ruspiro-gpio"}